# aoc2023

./: Cargo.toml  README.md  justfile  template.rs
src/: lib.rs
