[package]
name = "aoc2023"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
